--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "@primer/octicons-react": "^19.14.0",
     "@primer/primitives": "^10.3.4",
     "@primer/react": "^37.11.2",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x",
     "clsx": "^2.1.1",
     "highlight.js": "^11.11.1",
     "observable-hooks": "^4.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.x",
+    "react-dom": "18.x",
     "react-markdown": "^9.0.3",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.0",
     "rxjs": "^7.8.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "5.x"
   },
   "msw": {
     "workerDirectory": [
