--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@storybook/addon-essentials": "^8.5.3",
     "@storybook/react": "^8.5.2",
     "@storybook/react-vite": "^8.5.3",
+    "@types/node": "^22.13.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@wopjs/eslint-config": "^0.1.11",
     "eslint": "^9.19.0",
@@ -32,14 +33,12 @@
     "vite": "^6.0.11"
   },
   "dependencies": {
-    "@hyrious/github-markdown-css": "^0.2.4",
     "@primer/octicons-react": "^19.14.0",
     "@primer/primitives": "^10.3.4",
     "@primer/react": "^37.11.2",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "clsx": "^2.1.1",
-    "highlight.js": "^11.11.1",
     "observable-hooks": "^4.2.4",
     "react": "18.x",
     "react-dom": "18.x",
