--- a/package.json
+++ b/package.json
@@ -43,7 +43,12 @@
     "react": "18.x",
     "react-dom": "18.x",
     "react-markdown": "^9.0.3",
-    "rehype-highlight": "^7.0.2",
+    "rehype-github-emoji": "^1.0.0",
+    "rehype-github-image": "^1.0.0",
+    "rehype-github-link": "^1.0.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-raw": "7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "rxjs": "^7.8.1",
     "styled-components": "5.x"
