--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/react": "8.6.12",
+    "@storybook/react-vite": "8.6.12",
     "@types/node": "^22.15.3",
     "@vitejs/plugin-react": "^4.4.1",
     "@wopjs/eslint-config": "^0.1.21",
     "eslint": "^9.25.1",
-    "msw": "^2.7.5",
-    "msw-storybook-addon": "^2.0.4",
+    "msw": "2.7.5",
+    "msw-storybook-addon": "2.0.4",
     "prettier": "^3.5.3",
     "sass": "^1.87.0",
-    "storybook": "^8.5.2",
-    "typescript": "^5.8.3",
+    "storybook": "8.5.2",
+    "typescript": "5.8.3",
     "unocss": "^66.0.0",
     "vite": "^6.3.4"
   },
